# order-assistant

./: .gitignore  Cargo.toml  Dockerfile  INFO.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  env.sample
src/: api.rs  chat.rs  error.rs  functions.rs  lib.rs  main.rs  menu.rs  order.rs
static/: menu.json
