[package]
name = "customer_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
redis = { version = "0.23", features = ["tokio-comp"] }
dotenv = "0.15"
